--- a/config/database.yml
+++ b/config/database.yml
@@ -5,7 +5,7 @@
 #   gem 'sqlite3'
 development:
   adapter: postgresql
-  database: db/contabilizacion.development
+  database: db/contabilizacion-development
   pool: 5
   timeout: 5000
 
@@ -14,12 +14,12 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: postgresql
-  database: db/contabilizacion.sqlite3
+  database: db/contabilizacion-test
   pool: 5
   timeout: 5000
 
 production:
   adapter: postgresql
-  database: db/contabilizacion.sqlite3
+  database: db/contabilizacion-test
   pool: 5
   timeout: 5000
